Rodapé do site e estilos do cabeçalho

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- Aqui o <h2> é mais um título porém tendo um "peso" menor seguindo até o <h6> -->
       <h2>Seção 1: Parágrafos e formatação</h2>
       <p>
-        Aqui está um <strong>parágrafo</strong> (negrito com strong) com
+        Aqui está um <strong>parágrafo</strong> com
         alguns textos: <br />
         <em>itálico,</em><u>sublinhado,</u><mark>destacado</mark>
       </p>
@@ -49,16 +49,16 @@
       <h2>Seção 2: Lista e Tabelas</h2>
       <!-- Lista ordenada -->
       <ol>
-        <li> <- Primeiro item</li>
-        <li> <- Segundo item</li>
-        <li> <- Terceiro item</li>
+        <li> <- Primeiro </li>
+        <li> <- Segundo </li>
+        <li> <- Terceiro </li>
       </ol>
       <!-- Lista não ordenada com indice quadrado. 
          Obsv: não é uma boa prática styles inline-->
-      <ul style="list-style-type: square;">
-        <li>Primeiro item não ordenado</li>
-        <li>Segundo item não ordenado</li>
-        <li>Terceiro item não ordenado</li>
+      <ul>
+        <li>Primeiro não ordenado</li>
+        <li>Segundo não ordenado</li>
+        <li>Terceiro não ordenado</li>
       </ul>
 
       <!-- Tabela com atributos -->
@@ -122,13 +122,21 @@
           <label><input type="checkbox" name="preferencia2" value="opcao2">Bife de fígado acebolado</label>
           <label><input type="checkbox" name="preferencia3" value="opcao3">Doce de Jaca</label>
         </fieldset>
-        
+
         <button type="submit">Enviar pedido.</button>
 
       </form>
     </section>
 
   </main>
+  <!-- Rodapé da página: A tag <footer> pode conter direitos autorais, links de navegação,
+     informações de contato, redes sociais, formulário de newsletter e declarações legais. -->
+  <footer>
+    <p>&copy; 2024 José Lucas. Todos os direitos reservados.</p>
+    <address>
+      Contato: <a href="mailto:exemplo@gmail.com">exemplo@gmail.com</a>
+    </address>
+  </footer>
 </body>
 
 </html>
