--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <!-- Tabela com atributos -->
       <table border="1">
         <caption>
-          Titúlo da Tabela de Exemplo:
+          Título da Tabela de Exemplo:
         </caption>
         <thead>
           <tr>
@@ -90,7 +90,7 @@
 
     <!-- Separação do grupo 3: Imagem e Formulário -->
     <section id="section3">
-
+      <h2>Seção 3: Imagens e Formulário</h2>
       <!-- Imagem com atributos de formatação -->
       <img src="feneco-based.jpg" alt="foto de um feneco" title="Dúvido não achar fofo!" width="250" height="250" />
 
